--- a/src/main/resources/de/hirola/runningplanbuilder/template-view.fxml
+++ b/src/main/resources/de/hirola/runningplanbuilder/template-view.fxml
@@ -7,7 +7,10 @@
 <?import javafx.scene.layout.AnchorPane?>
 <?import javafx.scene.text.Font?>
 
-<AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="450.0" prefWidth="720.0" xmlns="http://javafx.com/javafx" xmlns:fx="http://javafx.com/fxml" fx:controller="de.hirola.runningplanbuilder.controller.TemplateViewController">
+<?import javafx.scene.control.TextArea?>
+<AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity"
+            prefHeight="450.0" prefWidth="720.0" xmlns="http://javafx.com/javafx" xmlns:fx="http://javafx.com/fxml"
+            fx:controller="de.hirola.runningplanbuilder.controller.TemplateViewController">
    <Label fx:id="nameTextFieldLabel" layoutX="40.0" layoutY="141.0" prefHeight="40.0" prefWidth="120.0" text="Name:">
       <font>
          <Font size="14.0" />
@@ -19,14 +22,14 @@
          <Font size="14.0" />
       </font>
    </Label>
-   <ComboBox fx:id="orderNumberComboBox" onAction="#onAction" layoutX="180.0" layoutY="209.0" prefWidth="150.0" />
+   <ComboBox fx:id="orderNumberComboBox" layoutX="180.0" layoutY="209.0" onAction="#onAction" prefWidth="150.0" />
    <Label fx:id="remarksTextFieldLabel" layoutX="40.0" layoutY="261.0" prefHeight="40.0" prefWidth="120.0" text="Dauer (min):">
       <font>
          <Font size="14.0" />
       </font>
    </Label>
-   <TextField fx:id="remarksTextField" layoutX="180.0" layoutY="269.0" prefHeight="100.0" prefWidth="420.0" />
-   <Button fx:id="saveButton" onAction="#onAction" layoutX="40.0" layoutY="398.0" mnemonicParsing="false" prefWidth="80.0" text="Speichern" />
-   <Button fx:id="closeButton" onAction="#onAction" layoutX="600.0" layoutY="398.0" mnemonicParsing="false" prefWidth="80.0" text="Schliessen" />
+   <TextArea fx:id="remarksTextArea" wrapText="true" layoutX="180.0" layoutY="269.0" prefHeight="100.0" prefWidth="420.0" />
+   <Button fx:id="saveButton" layoutX="40.0" layoutY="398.0" mnemonicParsing="false" onAction="#onAction" prefWidth="120.0" text="Speichern" />
+   <Button fx:id="closeButton" layoutX="560.0" layoutY="398.0" mnemonicParsing="false" onAction="#onAction" prefWidth="120.0" text="Schliessen" />
    <TextField fx:id="nameTextField" layoutX="180.0" layoutY="149.0" prefHeight="25.0" prefWidth="420.0" />
 </AnchorPane>
