--- a/src/main/resources/preferences-view.fxml
+++ b/src/main/resources/preferences-view.fxml
@@ -8,36 +8,56 @@
 <?import javafx.scene.layout.AnchorPane?>
 <?import javafx.scene.text.Font?>
 
-<TabPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="400.0" prefWidth="600.0" tabClosingPolicy="UNAVAILABLE" xmlns="http://javafx.com/javafx/18" xmlns:fx="http://javafx.com/fxml/1" fx:controller="de.hirola.runningplanbuilder.controller.PreferencesViewController">
+<TabPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity"
+         prefHeight="400.0" prefWidth="600.0" tabClosingPolicy="UNAVAILABLE"
+         xmlns="http://javafx.com/javafx" xmlns:fx="http://javafx.com/fxml"
+         fx:controller="de.hirola.runningplanbuilder.controller.PreferencesViewController">
     <Tab text="Common">
         <AnchorPane prefHeight="200.0" prefWidth="200.0">
-            <Label fx:id="debugModeCheckBoxLabel" layoutX="30.0" layoutY="40.0" prefHeight="40.0"
-                   prefWidth="200.0" text="Debug-Modus:">
+            <Label fx:id="debugModeCheckBoxLabel" layoutX="30.0" layoutY="40.0" prefHeight="40.0" prefWidth="200.0"
+                   text="Debug-Modus:">
                 <font>
-                    <Font size="14.0"/>
+                    <Font size="14.0" />
                 </font>
             </Label>
-            <CheckBox fx:id="debugModeCheckBox" layoutX="255.0" layoutY="45.0" mnemonicParsing="false"/>
+            <CheckBox fx:id="debugModeCheckBox" layoutX="255.0" layoutY="50.0" mnemonicParsing="false"
+                      onAction="#onAction" />
+         <Label fx:id="debugModeCheckBoxInfoLabel" alignment="TOP_LEFT" layoutX="30.0" layoutY="100.0"
+                prefHeight="80.0" prefWidth="415.0" wrapText="true">
+            <font>
+               <Font size="14.0" />
+            </font>
+         </Label>
         </AnchorPane>
     </Tab>
     <Tab text="Look &amp; Feel">
         <AnchorPane prefHeight="200.0" prefWidth="200.0">
-            <Label fx:id="localizationComboBoxLabel" layoutX="30.0" layoutY="40.0" prefHeight="40.0" prefWidth="120.0" text="Sprache:">
+            <Label fx:id="localizationComboBoxLabel" layoutX="30.0" layoutY="40.0" prefHeight="40.0" prefWidth="120.0"
+                   text="Language:">
                 <font>
                     <Font size="14.0" />
                 </font>
             </Label>
-            <ComboBox fx:id="localizationComboBox" layoutX="251.0" layoutY="47.0" onAction="#onAction" prefWidth="190.0" />
+            <ComboBox fx:id="localizationComboBox" layoutX="251.0" layoutY="47.0" prefWidth="190.0"
+                      onAction="#onAction" />
+         <Label fx:id="localizationComboBoxInfoLabel" alignment="TOP_LEFT" layoutX="30.0" layoutY="100.0"
+                prefHeight="80.0" prefWidth="415.0" wrapText="true">
+            <font>
+               <Font size="14.0" />
+            </font>
+         </Label>
         </AnchorPane>
     </Tab>
     <Tab text="JSON">
         <AnchorPane prefHeight="200.0" prefWidth="200.0">
-            <Label fx:id="useLastImportDirCheckBoxLabel" layoutX="30.0" layoutY="40.0" prefHeight="40.0" prefWidth="200.0" text="Letzten Ordner merken:">
+            <Label fx:id="useLastImportDirCheckBoxLabel" layoutX="30.0" layoutY="40.0" prefHeight="40.0" prefWidth="200.0"
+                   text="Remember last directory:">
                 <font>
                     <Font size="14.0" />
                 </font>
             </Label>
-            <CheckBox fx:id="useLastImportDirCheckBox" layoutX="255.0" layoutY="45.0" mnemonicParsing="false" selected="true" />
+            <CheckBox fx:id="useLastImportDirCheckBox" layoutX="255.0" layoutY="50.0" mnemonicParsing="false"
+                      onAction="#onAction" selected="true" />
         </AnchorPane>
     </Tab>
 </TabPane>
