--- a/src/main/resources/running-plan-view.fxml
+++ b/src/main/resources/running-plan-view.fxml
@@ -3,33 +3,35 @@
 <?import javafx.scene.control.Button?>
 <?import javafx.scene.control.ComboBox?>
 <?import javafx.scene.control.Label?>
+<?import javafx.scene.control.TextArea?>
 <?import javafx.scene.control.TextField?>
 <?import javafx.scene.layout.AnchorPane?>
 <?import javafx.scene.text.Font?>
 
-<?import javafx.scene.control.TextArea?>
-<AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity"
-            prefHeight="450.0" prefWidth="720.0" xmlns="http://javafx.com/javafx" xmlns:fx="http://javafx.com/fxml"
+<AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="450.0" prefWidth="800.0"
+            xmlns="http://javafx.com/javafx" xmlns:fx="http://javafx.com/fxml"
             fx:controller="de.hirola.runningplanbuilder.controller.RunningPlanViewController">
-   <Label fx:id="nameTextFieldLabel" layoutX="40.0" layoutY="141.0" prefHeight="40.0" prefWidth="120.0" text="Name:">
+   <Label fx:id="infoLabel" layoutX="40.0" layoutY="40.0" prefHeight="80.0" prefWidth="700.0" text="Infos" />
+   <Label fx:id="nameTextFieldLabel" layoutX="40.0" layoutY="140.0" prefHeight="40.0" prefWidth="180.0" text="Name of Running plan:">
       <font>
          <Font size="14.0" />
       </font>
    </Label>
-   <Label fx:id="infoLabel" layoutX="40.0" layoutY="40.0" prefHeight="80.0" prefWidth="700.0" text="Bla Bla Infos" />
-   <Label fx:id="orderNumberComboBoxLabel" layoutX="40.0" layoutY="201.0" prefHeight="40.0" prefWidth="120.0" text="Order number:">
+   <TextField fx:id="nameTextField" layoutX="260.0" layoutY="150.0" prefHeight="25.0" prefWidth="500.0" />
+   <Label fx:id="orderNumberComboBoxLabel" layoutX="40.0" layoutY="200.0" prefHeight="40.0" prefWidth="180.0" text="Order number:">
       <font>
          <Font size="14.0" />
       </font>
    </Label>
-   <ComboBox fx:id="orderNumberComboBox" layoutX="180.0" layoutY="209.0" onAction="#onAction" prefWidth="150.0" />
-   <Label fx:id="remarksTextFieldLabel" layoutX="40.0" layoutY="261.0" prefHeight="40.0" prefWidth="120.0" text="Dauer (min):">
+   <ComboBox fx:id="orderNumberComboBox" layoutX="260.0" layoutY="209.0" onAction="#onAction" prefWidth="150.0" />
+   <Label fx:id="remarksTextFieldLabel" layoutX="40.0" layoutY="260.0" prefHeight="40.0" prefWidth="180.0" text="Remarks:">
       <font>
          <Font size="14.0" />
       </font>
    </Label>
-   <TextArea fx:id="remarksTextArea" wrapText="true" layoutX="180.0" layoutY="269.0" prefHeight="100.0" prefWidth="420.0" />
-   <Button fx:id="saveButton" layoutX="40.0" layoutY="398.0" mnemonicParsing="false" onAction="#onAction" prefWidth="120.0" text="Speichern" />
-   <Button fx:id="closeButton" layoutX="560.0" layoutY="398.0" mnemonicParsing="false" onAction="#onAction" prefWidth="120.0" text="Schliessen" />
-   <TextField fx:id="nameTextField" layoutX="180.0" layoutY="149.0" prefHeight="25.0" prefWidth="420.0" />
+   <TextArea fx:id="remarksTextArea" layoutX="260.0" layoutY="270.0" prefHeight="100.0" prefWidth="500.0" wrapText="true" />
+   <Button fx:id="saveButton" layoutX="40.0" layoutY="400.0" mnemonicParsing="false" prefWidth="120.0"
+           onAction="#onAction" text="Save" />
+   <Button fx:id="closeButton" layoutX="640.0" layoutY="400.0" mnemonicParsing="false" prefWidth="120.0"
+           onAction="#onAction" text="Cancel" />
 </AnchorPane>
