--- a/src/main/resources/preferences-view.fxml
+++ b/src/main/resources/preferences-view.fxml
@@ -14,8 +14,8 @@
          fx:controller="de.hirola.runningplanbuilder.controller.PreferencesViewController">
     <Tab text="Common">
         <AnchorPane prefHeight="200.0" prefWidth="200.0">
-            <Label fx:id="debugModeCheckBoxLabel" layoutX="30.0" layoutY="40.0" prefHeight="40.0" prefWidth="200.0"
-                   text="Debug-Modus:">
+            <Label fx:id="debugModeCheckBoxLabel" layoutX="30.0" layoutY="40.0"
+                   prefHeight="40.0" prefWidth="200.0" text="Debug-Modus:">
                 <font>
                     <Font size="14.0" />
                 </font>
@@ -32,32 +32,39 @@
     </Tab>
     <Tab text="Look &amp; Feel">
         <AnchorPane prefHeight="200.0" prefWidth="200.0">
-            <Label fx:id="localizationComboBoxLabel" layoutX="30.0" layoutY="40.0" prefHeight="40.0" prefWidth="120.0"
-                   text="Language:">
+            <Label fx:id="localizationComboBoxLabel" layoutX="30.0" layoutY="40.0"
+                   prefHeight="40.0" prefWidth="230.0" text="Language:">
                 <font>
                     <Font size="14.0" />
                 </font>
             </Label>
-            <ComboBox fx:id="localizationComboBox" layoutX="251.0" layoutY="47.0" prefWidth="190.0"
-                      onAction="#onAction" />
-         <Label fx:id="localizationComboBoxInfoLabel" alignment="TOP_LEFT" layoutX="30.0" layoutY="100.0"
-                prefHeight="80.0" prefWidth="415.0" wrapText="true">
+            <ComboBox fx:id="localizationComboBox" layoutX="300.0" layoutY="45.0" onAction="#onAction" prefWidth="190.0" />
+         <Label fx:id="useLastWindowValuesCheckBoxLabel" layoutX="30.0" layoutY="100.0"
+                prefHeight="40.0" prefWidth="230.0" text="Use last window size:">
             <font>
                <Font size="14.0" />
             </font>
          </Label>
+         <CheckBox fx:id="useLastWindowValuesCheckBox" layoutX="300.0" layoutY="110.0" mnemonicParsing="false"
+                   onAction="#onAction" selected="true" />
+        <Label fx:id="localizationComboBoxInfoLabel" alignment="TOP_LEFT" layoutX="30.0" layoutY="160.0"
+               prefHeight="80.0" prefWidth="415.0" wrapText="true">
+            <font>
+                <Font size="14.0" />
+            </font>
+        </Label>
         </AnchorPane>
     </Tab>
     <Tab text="JSON">
         <AnchorPane prefHeight="200.0" prefWidth="200.0">
-            <Label fx:id="useLastImportDirCheckBoxLabel" layoutX="30.0" layoutY="40.0" prefHeight="40.0" prefWidth="200.0"
-                   text="Remember last directory:">
+            <Label fx:id="useLastImportDirCheckBoxLabel" layoutX="30.0" layoutY="40.0"
+                   prefHeight="40.0" prefWidth="200.0" text="Remember last directory:">
                 <font>
                     <Font size="14.0" />
                 </font>
             </Label>
             <CheckBox fx:id="useLastImportDirCheckBox" layoutX="255.0" layoutY="50.0" mnemonicParsing="false"
-                      onAction="#onAction" selected="true" />
+                      onAction="#onAction" />
         </AnchorPane>
     </Tab>
 </TabPane>
