--- a/src/main/resources/running-entry-view.fxml
+++ b/src/main/resources/running-entry-view.fxml
@@ -8,7 +8,7 @@
 <?import javafx.scene.layout.AnchorPane?>
 <?import javafx.scene.text.Font?>
 
-<AnchorPane fx:id="anchorPane" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity"
+<AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity"
             prefHeight="650.0" prefWidth="760.0"
             xmlns="http://javafx.com/javafx" xmlns:fx="http://javafx.com/fxml"
             fx:controller="de.hirola.runningplanbuilder.controller.RunningEntryViewController">
@@ -19,19 +19,19 @@
          <Font size="14.0" />
       </font>
    </Label>
-   <ComboBox fx:id="weekDayComboBox" layoutX="240.0" layoutY="148.0" onAction="#onAction" prefWidth="190.0" />
+   <ComboBox fx:id="weekDayComboBox" layoutX="240.0" layoutY="148.0" onAction="#onAction" prefWidth="220.0" />
    <Label fx:id="weekComboBoxLabel" layoutX="40.0" layoutY="200.0" prefHeight="40.0" prefWidth="160.0" text="in week:">
       <font>
          <Font size="14.0" />
       </font>
    </Label>
-   <ComboBox fx:id="weekComboBox" layoutX="240.0" layoutY="207.0" onAction="#onAction" prefHeight="26.0" prefWidth="190.0" />
+   <ComboBox fx:id="weekComboBox" layoutX="240.0" layoutY="207.0" onAction="#onAction" prefHeight="26.0" prefWidth="220.0" />
    <Label fx:id="runningUnitsLabel" layoutX="40.0" layoutY="260.0" prefHeight="40.0" prefWidth="160.0" text="Running units">
       <font>
          <Font size="14.0" />
       </font>
    </Label>
-   <Button fx:id="addRunningUnitButton" layoutX="308.0" layoutY="265.0" mnemonicParsing="false" prefWidth="120.0"
+   <Button fx:id="addRunningUnitButton" layoutX="308.0" layoutY="265.0" mnemonicParsing="false" prefWidth="150.0"
            onAction="#onAction" text="Hinzufügen" />
    <ScrollPane layoutX="40.0" layoutY="315.0" prefHeight="240.0" prefWidth="680.0">
       <TableView fx:id="runningUnitsTableView" prefHeight="240.0" prefWidth="680.0" />
