--- a/src/main/resources/running-unit-view.fxml
+++ b/src/main/resources/running-unit-view.fxml
@@ -7,7 +7,7 @@
 <?import javafx.scene.layout.AnchorPane?>
 <?import javafx.scene.text.Font?>
 
-<AnchorPane fx:id="anchorPane" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity"
+<AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity"
             prefHeight="363.0" prefWidth="760.0"
             xmlns="http://javafx.com/javafx" xmlns:fx="http://javafx.com/fxml"
             fx:controller="de.hirola.runningplanbuilder.controller.RunningUnitViewController">
@@ -28,7 +28,7 @@
          <Font size="14.0" />
       </font>
    </Label>
-   <TextField fx:id="durationTextField" layoutX="180.0" layoutY="207.0" prefHeight="26.0" prefWidth="90.0" />
+   <TextField fx:id="durationTextField" layoutX="200.0" layoutY="207.0" prefHeight="26.0" prefWidth="90.0" />
    <Button fx:id="saveButton" layoutX="40.0" layoutY="300.0" mnemonicParsing="false" prefWidth="120.0"
            onAction="#onAction" text="Save" />
    <Button fx:id="closeButton" layoutX="600.0" layoutY="300.0" mnemonicParsing="false" prefWidth="120.0"
